--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ name = "WASM_RUST_ED25519"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type=["cdylib"]
 
 ############################ DEPENDENCIES ###########################
 
@@ -23,19 +25,22 @@ wasm-bindgen = "0.2.80"
 js-sys = "0.3.57"
 
 
-[lib]
-crate-type=["cdylib"]
-
-
 ############################## OPTIMIZATION STUFF ##############################
 
 
 # +Use RUSTFLAGS="-C target-cpu=native"
 
 #Wasm settings
+#See https://rustwasm.github.io/docs/wasm-pack/cargo-toml-configuration.html
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+
+
+[package.metadata.wasm-pack.profile.release.wasm-bindgen]
+debug-js-glue = false
+demangle-name-section = true
+dwarf-debug-info = false
+
 
 
 [profile.release]
@@ -47,7 +52,7 @@ strip=true
 ############# <<<<< FOR DEPENDENCIES >>>>> #############
 
 [profile.release.package."*"]
-#lto=true
+
 codegen-units=1
 incremental=true
 strip=true
