--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ js-sys = "0.3.57"
 #See https://rustwasm.github.io/docs/wasm-pack/cargo-toml-configuration.html
 
 [package.metadata.wasm-pack.profile.release]
-
+wasm-opt=false
 
 [package.metadata.wasm-pack.profile.release.wasm-bindgen]
 debug-js-glue = false
