--- a/ASSEMBLY_SCRIPT/package.json
+++ b/ASSEMBLY_SCRIPT/package.json
@@ -14,6 +14,7 @@
     "@assemblyscript/loader": "^0.20.13",
     "assemblyscript": "^0.19.9",
     "wasm-json-toolkit": "^0.2.6",
-    "wasm-metering": "^0.2.1"
+    "wasm-metering": "^0.2.1",
+    "wat-wasm":"^v1.0.43"
   }
 }
