--- a/ASSEMBLY_SCRIPT/RUST_WITH_INJECTION/Cargo.toml
+++ b/ASSEMBLY_SCRIPT/RUST_WITH_INJECTION/Cargo.toml
@@ -1,8 +1,26 @@
 [package]
-name = "RUST_WITH_INJECTION"
+name = "WASM_RUST_ED25519"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+#to force to work *-dalek. See https://stackoverflow.com/questions/65562447/the-trait-rand-corecryptorng-is-not-implemented-for-osrng
+rand = {version="0.7.3",features = ["wasm-bindgen"]}
+
+ed25519-dalek = {version="1.0.1"}
+base64 = "0.13.0"
+bincode = "1.3.3"
+
+wasm-bindgen = "0.2.80"
+js-sys = "0.3.57"
+
+[lib]
+crate-type=["cdylib"]
+
+
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
